[tool.poetry]
name = "chat-dungeons"
version = "0.1.0"
description = ""
authors = ["Vankad24 <vankad24@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.0"
attrs = "^23.2.0"
pytelegrambotapi = "^4.15.2"
numpy = "^1.26.3"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
